--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="cache.manifest">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </head>
-  <body>
+  <body onload="checkForUpdate()">
     <canvas id="pinkboard"></canvas>
     <div id="drag-container">
       <div id="spin-container">
