--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tặng Hiền</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://png.pngtree.com/png-vector/20190909/ourmid/pngtree-red-heart-icon-isolated-png-image_1726594.jpg"
+    />
     <link rel="stylesheet" href="styles.css" />
     <script type="text/javascript" src="app.js"></script>
   </head>
@@ -42,7 +47,7 @@
 
     <div id="music-container">
       <iframe
-        src="https://www.youtube.com/embed/yrAlRngYndg?autoplay=1"
+        src="https://www.youtube.com/embed/yrAlRngYndg?rel=0&amp;autoplay=1"
         class="frame"
         allowfullscreen
         frameborder="0"
